src/grammar/Sysy22Parser.cpp

// Generated from Sysy22.g4 by ANTLR 4.13.2


#include "Sysy22Listener.h"
#include "Sysy22Visitor.h"

#include "Sysy22Parser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct Sysy22ParserStaticData final {
  Sysy22ParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  Sysy22ParserStaticData(const Sysy22ParserStaticData&) = delete;
  Sysy22ParserStaticData(Sysy22ParserStaticData&&) = delete;
  Sysy22ParserStaticData& operator=(const Sysy22ParserStaticData&) = delete;
  Sysy22ParserStaticData& operator=(Sysy22ParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag sysy22ParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<Sysy22ParserStaticData> sysy22ParserStaticData = nullptr;

void sysy22ParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (sysy22ParserStaticData != nullptr) {
    return;
  }
#else
  assert(sysy22ParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<Sysy22ParserStaticData>(
    std::vector<std::string>{
      "compUnits", "compUnit", "decl", "constDecl", "constDef", "varDecl", 
      "varDef", "initVal", "bType", "funcDef", "funcType", "funcFParams", 
      "funcFParam", "block", "blockItem", "stmt", "exp", "cond", "lVal", 
      "primaryExp", "intConst", "floatConst", "number", "unaryExp", "stringConst", 
      "funcRParam", "funcRParams", "mulExp", "addExp", "relExp", "eqExp", 
      "lAndExp", "lOrExp"
    },
    std::vector<std::string>{
      "", "','", "';'", "'['", "']'", "'{'", "'}'", "'('", "')'", "'int'", 
      "'float'", "'void'", "'if'", "'else'", "'while'", "'break'", "'continue'", 
      "'return'", "'const'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", 
      "'!='", "'<'", "'>'", "'<='", "'>='", "'!'", "'&&'", "'||'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "INT", "FLOAT", "VOID", "IF", 
      "ELSE", "WHILE", "BREAK", "CONTINUE", "RETURN", "CONST", "Assign", 
      "Add", "Sub", "Mul", "Div", "Mod", "Eq", "Neq", "Lt", "Gt", "Leq", 
      "Geq", "Not", "And", "Or", "Ident", "DecConst", "OctConst", "HexConst", 
      "DecimalFloatingConst", "HexFloatingConst", "StringConst", "WhiteSpace", 
      "LineComment", "BlockComment"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  sysy22ParserStaticData = std::move(staticData);
}

}

Sysy22Parser::Sysy22Parser(TokenStream *input) : Sysy22Parser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

Sysy22Parser::Sysy22Parser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  Sysy22Parser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *sysy22ParserStaticData->atn, sysy22ParserStaticData->decisionToDFA, sysy22ParserStaticData->sharedContextCache, options);
}

Sysy22Parser::~Sysy22Parser() {
  delete _interpreter;
}

const atn::ATN& Sysy22Parser::getATN() const {
  return *sysy22ParserStaticData->atn;
}

std::string Sysy22Parser::getGrammarFileName() const {
  return "Sysy22.g4";
}

const std::vector<std::string>& Sysy22Parser::getRuleNames() const {
  return sysy22ParserStaticData->ruleNames;
}

const dfa::Vocabulary& Sysy22Parser::getVocabulary() const {
  return sysy22ParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView Sysy22Parser::getSerializedATN() const {
  return sysy22ParserStaticData->serializedATN;
}


//----------------- CompUnitsContext ------------------------------------------------------------------

Sysy22Parser::CompUnitsContext::CompUnitsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Sysy22Parser::CompUnitsContext::EOF() {
  return getToken(Sysy22Parser::EOF, 0);
}

std::vector<Sysy22Parser::CompUnitContext *> Sysy22Parser::CompUnitsContext::compUnit() {
  return getRuleContexts<Sysy22Parser::CompUnitContext>();
}

Sysy22Parser::CompUnitContext* Sysy22Parser::CompUnitsContext::compUnit(size_t i) {
  return getRuleContext<Sysy22Parser::CompUnitContext>(i);
}


size_t Sysy22Parser::CompUnitsContext::getRuleIndex() const {
  return Sysy22Parser::RuleCompUnits;
}

void Sysy22Parser::CompUnitsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sysy22Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompUnits(this);
}

void Sysy22Parser::CompUnitsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sysy22Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompUnits(this);
}


std::any Sysy22Parser::CompUnitsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sysy22Visitor*>(visitor))
    return parserVisitor->visitCompUnits(this);
  else
    return visitor->visitChildren(this);
}

Sysy22Parser::CompUnitsContext* Sysy22Parser::compUnits() {
  CompUnitsContext *_localctx = _tracker.createInstance<CompUnitsContext>(_ctx, getState());
  enterRule(_localctx, 0, Sysy22Parser::RuleCompUnits);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 265728) != 0)) {
      setState(66);
      compUnit();
      setState(71);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(72);
    match(Sysy22Parser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompUnitContext ------------------------------------------------------------------

Sysy22Parser::CompUnitContext::CompUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Sysy22Parser::FuncDefContext* Sysy22Parser::CompUnitContext::funcDef() {
  return getRuleContext<Sysy22Parser::FuncDefContext>(0);
}

Sysy22Parser::DeclContext* Sysy22Parser::CompUnitContext::decl() {
  return getRuleContext<Sysy22Parser::DeclContext>(0);
}


size_t Sysy22Parser::CompUnitContext::getRuleIndex() const {
  return Sysy22Parser::RuleCompUnit;
}

void Sysy22Parser::CompUnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sysy22Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompUnit(this);
}

void Sysy22Parser::CompUnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sysy22Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompUnit(this);
}


std::any Sysy22Parser::CompUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sysy22Visitor*>(visitor))
    return parserVisitor->visitCompUnit(this);
  else
    return visitor->visitChildren(this);
}

Sysy22Parser::CompUnitContext* Sysy22Parser::compUnit() {
  CompUnitContext *_localctx = _tracker.createInstance<CompUnitContext>(_ctx, getState());
  enterRule(_localctx, 2, Sysy22Parser::RuleCompUnit);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(76);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(74);
      funcDef();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(75);
      decl();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

Sysy22Parser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Sysy22Parser::ConstDeclContext* Sysy22Parser::DeclContext::constDecl() {
  return getRuleContext<Sysy22Parser::ConstDeclContext>(0);
}

Sysy22Parser::VarDeclContext* Sysy22Parser::DeclContext::varDecl() {
  return getRuleContext<Sysy22Parser::VarDeclContext>(0);
}


size_t Sysy22Parser::DeclContext::getRuleIndex() const {
  return Sysy22Parser::RuleDecl;
}

void Sysy22Parser::DeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sysy22Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecl(this);
}

void Sysy22Parser::DeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sysy22Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecl(this);
}


std::any Sysy22Parser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sysy22Visitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

Sysy22Parser::DeclContext* Sysy22Parser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 4, Sysy22Parser::RuleDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(80);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case Sysy22Parser::CONST: {
        enterOuterAlt(_localctx, 1);
        setState(78);
        constDecl();
        break;
      }

      case Sysy22Parser::INT:
      case Sysy22Parser::FLOAT: {
        enterOuterAlt(_localctx, 2);
        setState(79);
        varDecl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstDeclContext ------------------------------------------------------------------

Sysy22Parser::ConstDeclContext::ConstDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Sysy22Parser::ConstDeclContext::CONST() {
  return getToken(Sysy22Parser::CONST, 0);
}

Sysy22Parser::BTypeContext* Sysy22Parser::ConstDeclContext::bType() {
  return getRuleContext<Sysy22Parser::BTypeContext>(0);
}

std::vector<Sysy22Parser::ConstDefContext *> Sysy22Parser::ConstDeclContext::constDef() {
  return getRuleContexts<Sysy22Parser::ConstDefContext>();
}

Sysy22Parser::ConstDefContext* Sysy22Parser::ConstDeclContext::constDef(size_t i) {
  return getRuleContext<Sysy22Parser::ConstDefContext>(i);
}


size_t Sysy22Parser::ConstDeclContext::getRuleIndex() const {
  return Sysy22Parser::RuleConstDecl;
}

void Sysy22Parser::ConstDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sysy22Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstDecl(this);
}

void Sysy22Parser::ConstDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sysy22Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstDecl(this);
}


std::any Sysy22Parser::ConstDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sysy22Visitor*>(visitor))
    return parserVisitor->visitConstDecl(this);
  else
    return visitor->visitChildren(this);
}

Sysy22Parser::ConstDeclContext* Sysy22Parser::constDecl() {
  ConstDeclContext *_localctx = _tracker.createInstance<ConstDeclContext>(_ctx, getState());
  enterRule(_localctx, 6, Sysy22Parser::RuleConstDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    match(Sysy22Parser::CONST);
    setState(83);
    bType();
    setState(84);
    constDef();
    setState(89);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == Sysy22Parser::T__0) {
      setState(85);
      match(Sysy22Parser::T__0);
      setState(86);
      constDef();
      setState(91);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(92);
    match(Sysy22Parser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstDefContext ------------------------------------------------------------------

Sysy22Parser::ConstDefContext::ConstDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Sysy22Parser::ConstDefContext::Ident() {
  return getToken(Sysy22Parser::Ident, 0);
}

tree::TerminalNode* Sysy22Parser::ConstDefContext::Assign() {
  return getToken(Sysy22Parser::Assign, 0);
}

Sysy22Parser::InitValContext* Sysy22Parser::ConstDefContext::initVal() {
  return getRuleContext<Sysy22Parser::InitValContext>(0);
}

std::vector<Sysy22Parser::ExpContext *> Sysy22Parser::ConstDefContext::exp() {
  return getRuleContexts<Sysy22Parser::ExpContext>();
}

Sysy22Parser::ExpContext* Sysy22Parser::ConstDefContext::exp(size_t i) {
  return getRuleContext<Sysy22Parser::ExpContext>(i);
}


size_t Sysy22Parser::ConstDefContext::getRuleIndex() const {
  return Sysy22Parser::RuleConstDef;
}

void Sysy22Parser::ConstDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sysy22Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstDef(this);
}

void Sysy22Parser::ConstDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sysy22Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstDef(this);
}


std::any Sysy22Parser::ConstDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sysy22Visitor*>(visitor))
    return parserVisitor->visitConstDef(this);
  else
    return visitor->visitChildren(this);
}

Sysy22Parser::ConstDefContext* Sysy22Parser::constDef() {
  ConstDefContext *_localctx = _tracker.createInstance<ConstDefContext>(_ctx, getState());
  enterRule(_localctx, 8, Sysy22Parser::RuleConstDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    match(Sysy22Parser::Ident);
    setState(101);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == Sysy22Parser::T__2) {
      setState(95);
      match(Sysy22Parser::T__2);
      setState(96);
      exp();
      setState(97);
      match(Sysy22Parser::T__3);
      setState(103);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(104);
    match(Sysy22Parser::Assign);
    setState(105);
    initVal();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclContext ------------------------------------------------------------------

Sysy22Parser::VarDeclContext::VarDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Sysy22Parser::BTypeContext* Sysy22Parser::VarDeclContext::bType() {
  return getRuleContext<Sysy22Parser::BTypeContext>(0);
}

std::vector<Sysy22Parser::VarDefContext *> Sysy22Parser::VarDeclContext::varDef() {
  return getRuleContexts<Sysy22Parser::VarDefContext>();
}

Sysy22Parser::VarDefContext* Sysy22Parser::VarDeclContext::varDef(size_t i) {
  return getRuleContext<Sysy22Parser::VarDefContext>(i);
}


size_t Sysy22Parser::VarDeclContext::getRuleIndex() const {
  return Sysy22Parser::RuleVarDecl;
}

void Sysy22Parser::VarDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sysy22Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDecl(this);
}

void Sysy22Parser::VarDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sysy22Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDecl(this);
}


std::any Sysy22Parser::VarDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sysy22Visitor*>(visitor))
    return parserVisitor->visitVarDecl(this);
  else
    return visitor->visitChildren(this);
}

Sysy22Parser::VarDeclContext* Sysy22Parser::varDecl() {
  VarDeclContext *_localctx = _tracker.createInstance<VarDeclContext>(_ctx, getState());
  enterRule(_localctx, 10, Sysy22Parser::RuleVarDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    bType();
    setState(108);
    varDef();
    setState(113);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == Sysy22Parser::T__0) {
      setState(109);
      match(Sysy22Parser::T__0);
      setState(110);
      varDef();
      setState(115);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(116);
    match(Sysy22Parser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDefContext ------------------------------------------------------------------

Sysy22Parser::VarDefContext::VarDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Sysy22Parser::VarDefContext::Ident() {
  return getToken(Sysy22Parser::Ident, 0);
}

std::vector<Sysy22Parser::ExpContext *> Sysy22Parser::VarDefContext::exp() {
  return getRuleContexts<Sysy22Parser::ExpContext>();
}

Sysy22Parser::ExpContext* Sysy22Parser::VarDefContext::exp(size_t i) {
  return getRuleContext<Sysy22Parser::ExpContext>(i);
}

tree::TerminalNode* Sysy22Parser::VarDefContext::Assign() {
  return getToken(Sysy22Parser::Assign, 0);
}

Sysy22Parser::InitValContext* Sysy22Parser::VarDefContext::initVal() {
  return getRuleContext<Sysy22Parser::InitValContext>(0);
}


size_t Sysy22Parser::VarDefContext::getRuleIndex() const {
  return Sysy22Parser::RuleVarDef;
}

void Sysy22Parser::VarDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sysy22Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDef(this);
}

void Sysy22Parser::VarDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sysy22Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDef(this);
}


std::any Sysy22Parser::VarDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sysy22Visitor*>(visitor))
    return parserVisitor->visitVarDef(this);
  else
    return visitor->visitChildren(this);
}

Sysy22Parser::VarDefContext* Sysy22Parser::varDef() {
  VarDefContext *_localctx = _tracker.createInstance<VarDefContext>(_ctx, getState());
  enterRule(_localctx, 12, Sysy22Parser::RuleVarDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    match(Sysy22Parser::Ident);
    setState(125);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == Sysy22Parser::T__2) {
      setState(119);
      match(Sysy22Parser::T__2);
      setState(120);
      exp();
      setState(121);
      match(Sysy22Parser::T__3);
      setState(127);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(130);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == Sysy22Parser::Assign) {
      setState(128);
      match(Sysy22Parser::Assign);
      setState(129);
      initVal();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InitValContext ------------------------------------------------------------------

Sysy22Parser::InitValContext::InitValContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t Sysy22Parser::InitValContext::getRuleIndex() const {
  return Sysy22Parser::RuleInitVal;
}

void Sysy22Parser::InitValContext::copyFrom(InitValContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- InitContext ------------------------------------------------------------------

Sysy22Parser::ExpContext* Sysy22Parser::InitContext::exp() {
  return getRuleContext<Sysy22Parser::ExpContext>(0);
}

Sysy22Parser::InitContext::InitContext(InitValContext *ctx) { copyFrom(ctx); }

void Sysy22Parser::InitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sysy22Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInit(this);
}
void Sysy22Parser::InitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sysy22Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInit(this);
}

std::any Sysy22Parser::InitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sysy22Visitor*>(visitor))
    return parserVisitor->visitInit(this);
  else
    return visitor->visitChildren(this);
}
//----------------- InitListContext ------------------------------------------------------------------

std::vector<Sysy22Parser::InitValContext *> Sysy22Parser::InitListContext::initVal() {
  return getRuleContexts<Sysy22Parser::InitValContext>();
}

Sysy22Parser::InitValContext* Sysy22Parser::InitListContext::initVal(size_t i) {
  return getRuleContext<Sysy22Parser::InitValContext>(i);
}

Sysy22Parser::InitListContext::InitListContext(InitValContext *ctx) { copyFrom(ctx); }

void Sysy22Parser::InitListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sysy22Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInitList(this);
}
void Sysy22Parser::InitListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sysy22Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInitList(this);
}

std::any Sysy22Parser::InitListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sysy22Visitor*>(visitor))
    return parserVisitor->visitInitList(this);
  else
    return visitor->visitChildren(this);
}
Sysy22Parser::InitValContext* Sysy22Parser::initVal() {
  InitValContext *_localctx = _tracker.createInstance<InitValContext>(_ctx, getState());
  enterRule(_localctx, 14, Sysy22Parser::RuleInitVal);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(145);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case Sysy22Parser::T__6:
      case Sysy22Parser::Add:
      case Sysy22Parser::Sub:
      case Sysy22Parser::Not:
      case Sysy22Parser::Ident:
      case Sysy22Parser::DecConst:
      case Sysy22Parser::OctConst:
      case Sysy22Parser::HexConst:
      case Sysy22Parser::DecimalFloatingConst:
      case Sysy22Parser::HexFloatingConst: {
        _localctx = _tracker.createInstance<Sysy22Parser::InitContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(132);
        exp();
        break;
      }

      case Sysy22Parser::T__4: {
        _localctx = _tracker.createInstance<Sysy22Parser::InitListContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(133);
        match(Sysy22Parser::T__4);
        setState(142);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 1084482388128) != 0)) {
          setState(134);
          initVal();
          setState(139);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == Sysy22Parser::T__0) {
            setState(135);
            match(Sysy22Parser::T__0);
            setState(136);
            initVal();
            setState(141);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(144);
        match(Sysy22Parser::T__5);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BTypeContext ------------------------------------------------------------------

Sysy22Parser::BTypeContext::BTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t Sysy22Parser::BTypeContext::getRuleIndex() const {
  return Sysy22Parser::RuleBType;
}

void Sysy22Parser::BTypeContext::copyFrom(BTypeContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FloatContext ------------------------------------------------------------------

tree::TerminalNode* Sysy22Parser::FloatContext::FLOAT() {
  return getToken(Sysy22Parser::FLOAT, 0);
}

Sysy22Parser::FloatContext::FloatContext(BTypeContext *ctx) { copyFrom(ctx); }

void Sysy22Parser::FloatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sysy22Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFloat(this);
}
void Sysy22Parser::FloatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Sysy22Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFloat(this);
}

std::any Sysy22Parser::FloatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sysy22Visitor*>(visitor))
    return parserVisitor->visitFloat(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IntContext ------------------------------------------------------------------

tree::TerminalNode* Sysy22Parser::IntContext::INT() {
  return getToken(Sysy22Parser::INT, 0);
}

Sysy22Parser::IntContext::IntContext(BTypeContext *ctx) { copyFrom(ctx); }
